expo_logs.txt
Starting project at /Users/nishanoor/Documents/React/ZoxmInvoice
Starting Metro Bundler

warning: Bundler cache is empty, rebuilding (this may take a minute)
› Opening exp://192.168.1.6:8081 on Pixel_8_Pro
Waiting on http://localhost:8081
Logs for your project will appear below.
Android ./index.js ░░░░░░░░░░░░░░░░  0.0% (0/1)
Android ./index.js ▓▓▓▓▓▓▓▓▓▓▓▓▓░░░ 82.4% (1202/1328)
Android Bundling failed 5345ms index.js (1863 modules)
 ERROR  SyntaxError: /Users/nishanoor/Documents/React/ZoxmInvoice/src/screens/SettingsScreen.js: Expected corresponding JSX closing tag for <SafeAreaView>. (356:4)

  354 |
  355 |       <View className="h-20" />
> 356 |     </ScrollView>
      |     ^
  357 |   );
  358 | }
  359 |
    at constructor (/Users/nishanoor/Documents/React/ZoxmInvoice/node_modules/@babel/parser/lib/index.js:365:19)
    at FlowParserMixin.raise (/Users/nishanoor/Documents/React/ZoxmInvoice/node_modules/@babel/parser/lib/index.js:6599:19)
    at FlowParserMixin.jsxParseElementAt (/Users/nishanoor/Documents/React/ZoxmInvoice/node_modules/@babel/parser/lib/index.js:4727:16)
    at FlowParserMixin.jsxParseElement (/Users/nishanoor/Documents/React/ZoxmInvoice/node_modules/@babel/parser/lib/index.js:4749:17)
    at FlowParserMixin.parseExprAtom (/Users/nishanoor/Documents/React/ZoxmInvoice/node_modules/@babel/parser/lib/index.js:4759:19)
    at FlowParserMixin.parseExprSubscripts (/Users/nishanoor/Documents/React/ZoxmInvoice/node_modules/@babel/parser/lib/index.js:11081:23)
    at FlowParserMixin.parseUpdate (/Users/nishanoor/Documents/React/ZoxmInvoice/node_modules/@babel/parser/lib/index.js:11066:21)
    at FlowParserMixin.parseMaybeUnary (/Users/nishanoor/Documents/React/ZoxmInvoice/node_modules/@babel/parser/lib/index.js:11046:23)
    at FlowParserMixin.parseMaybeUnaryOrPrivate (/Users/nishanoor/Documents/React/ZoxmInvoice/node_modules/@babel/parser/lib/index.js:10899:61)
    at FlowParserMixin.parseExprOps (/Users/nishanoor/Documents/React/ZoxmInvoice/node_modules/@babel/parser/lib/index.js:10904:23)
    at FlowParserMixin.parseMaybeConditional (/Users/nishanoor/Documents/React/ZoxmInvoice/node_modules/@babel/parser/lib/index.js:10881:23)
    at FlowParserMixin.parseMaybeAssign (/Users/nishanoor/Documents/React/ZoxmInvoice/node_modules/@babel/parser/lib/index.js:10831:21)
    at /Users/nishanoor/Documents/React/ZoxmInvoice/node_modules/@babel/parser/lib/index.js:3498:39
    at FlowParserMixin.tryParse (/Users/nishanoor/Documents/React/ZoxmInvoice/node_modules/@babel/parser/lib/index.js:6907:20)
    at FlowParserMixin.parseMaybeAssign (/Users/nishanoor/Documents/React/ZoxmInvoice/node_modules/@babel/parser/lib/index.js:3498:18)
    at /Users/nishanoor/Documents/React/ZoxmInvoice/node_modules/@babel/parser/lib/index.js:10800:39
    at FlowParserMixin.allowInAnd (/Users/nishanoor/Documents/React/ZoxmInvoice/node_modules/@babel/parser/lib/index.js:12426:12)
    at FlowParserMixin.parseMaybeAssignAllowIn (/Users/nishanoor/Documents/React/ZoxmInvoice/node_modules/@babel/parser/lib/index.js:10800:17)
    at FlowParserMixin.parseMaybeAssignAllowInOrVoidPattern (/Users/nishanoor/Documents/React/ZoxmInvoice/node_modules/@babel/parser/lib/index.js:12493:17)
    at FlowParserMixin.parseParenAndDistinguishExpression (/Users/nishanoor/Documents/React/ZoxmInvoice/node_modules/@babel/parser/lib/index.js:11675:28)
    at FlowParserMixin.parseParenAndDistinguishExpression (/Users/nishanoor/Documents/React/ZoxmInvoice/node_modules/@babel/parser/lib/index.js:3591:18)
    at FlowParserMixin.parseExprAtom (/Users/nishanoor/Documents/React/ZoxmInvoice/node_modules/@babel/parser/lib/index.js:11331:23)
    at FlowParserMixin.parseExprAtom (/Users/nishanoor/Documents/React/ZoxmInvoice/node_modules/@babel/parser/lib/index.js:4764:20)
    at FlowParserMixin.parseExprSubscripts (/Users/nishanoor/Documents/React/ZoxmInvoice/node_modules/@babel/parser/lib/index.js:11081:23)
    at FlowParserMixin.parseUpdate (/Users/nishanoor/Documents/React/ZoxmInvoice/node_modules/@babel/parser/lib/index.js:11066:21)
    at FlowParserMixin.parseMaybeUnary (/Users/nishanoor/Documents/React/ZoxmInvoice/node_modules/@babel/parser/lib/index.js:11046:23)
    at FlowParserMixin.parseMaybeUnaryOrPrivate (/Users/nishanoor/Documents/React/ZoxmInvoice/node_modules/@babel/parser/lib/index.js:10899:61)
    at FlowParserMixin.parseExprOps (/Users/nishanoor/Documents/React/ZoxmInvoice/node_modules/@babel/parser/lib/index.js:10904:23)
    at FlowParserMixin.parseMaybeConditional (/Users/nishanoor/Documents/React/ZoxmInvoice/node_modules/@babel/parser/lib/index.js:10881:23)
    at FlowParserMixin.parseMaybeAssign (/Users/nishanoor/Documents/React/ZoxmInvoice/node_modules/@babel/parser/lib/index.js:10831:21)
    at FlowParserMixin.parseMaybeAssign (/Users/nishanoor/Documents/React/ZoxmInvoice/node_modules/@babel/parser/lib/index.js:3549:18)
    at FlowParserMixin.parseExpressionBase (/Users/nishanoor/Documents/React/ZoxmInvoice/node_modules/@babel/parser/lib/index.js:10784:23)
    at /Users/nishanoor/Documents/React/ZoxmInvoice/node_modules/@babel/parser/lib/index.js:10780:39
    at FlowParserMixin.allowInAnd (/Users/nishanoor/Documents/React/ZoxmInvoice/node_modules/@babel/parser/lib/index.js:12421:16)
    at FlowParserMixin.parseExpression (/Users/nishanoor/Documents/React/ZoxmInvoice/node_modules/@babel/parser/lib/index.js:10780:17)
    at FlowParserMixin.parseReturnStatement (/Users/nishanoor/Documents/React/ZoxmInvoice/node_modules/@babel/parser/lib/index.js:13142:28)
    at FlowParserMixin.parseStatementContent (/Users/nishanoor/Documents/React/ZoxmInvoice/node_modules/@babel/parser/lib/index.js:12798:21)
    at FlowParserMixin.parseStatementLike (/Users/nishanoor/Documents/React/ZoxmInvoice/node_modules/@babel/parser/lib/index.js:12767:17)
    at FlowParserMixin.parseStatementLike (/Users/nishanoor/Documents/React/ZoxmInvoice/node_modules/@babel/parser/lib/index.js:2918:24)
    at FlowParserMixin.parseStatementListItem (/Users/nishanoor/Documents/React/ZoxmInvoice/node_modules/@babel/parser/lib/index.js:12747:17)
    at FlowParserMixin.parseBlockOrModuleBlockBody (/Users/nishanoor/Documents/React/ZoxmInvoice/node_modules/@babel/parser/lib/index.js:13316:61)
    at FlowParserMixin.parseBlockBody (/Users/nishanoor/Documents/React/ZoxmInvoice/node_modules/@babel/parser/lib/index.js:13309:10)
    at FlowParserMixin.parseBlock (/Users/nishanoor/Documents/React/ZoxmInvoice/node_modules/@babel/parser/lib/index.js:13297:10)
    at FlowParserMixin.parseFunctionBody (/Users/nishanoor/Documents/React/ZoxmInvoice/node_modules/@babel/parser/lib/index.js:12100:24)
    at FlowParserMixin.parseFunctionBody (/Users/nishanoor/Documents/React/ZoxmInvoice/node_modules/@babel/parser/lib/index.js:2895:11)
    at FlowParserMixin.parseFunctionBodyAndFinish (/Users/nishanoor/Documents/React/ZoxmInvoice/node_modules/@babel/parser/lib/index.js:12086:10)
    at FlowParserMixin.parseFunctionBodyAndFinish (/Users/nishanoor/Documents/React/ZoxmInvoice/node_modules/@babel/parser/lib/index.js:2903:18)
    at /Users/nishanoor/Documents/React/ZoxmInvoice/node_modules/@babel/parser/lib/index.js:13445:12
    at FlowParserMixin.withSmartMixTopicForbiddingContext (/Users/nishanoor/Documents/React/ZoxmInvoice/node_modules/@babel/parser/lib/index.js:12403:14)
    at FlowParserMixin.parseFunction (/Users/nishanoor/Documents/React/ZoxmInvoice/node_modules/@babel/parser/lib/index.js:13444:10)
